--- a/htmlForms.css
+++ b/htmlForms.css
@@ -1,4 +1,6 @@
-*{
-    margin: 0;
-    text-align: center;
+body{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
 }
