--- a/htmlForms.css
+++ b/htmlForms.css
@@ -19,7 +19,18 @@ input{
     width: 90%;
     height: 30px;
     border-radius: 0 10px 12px 22px;
-    margin: 5px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    padding: 10px;
+}
+
+textarea{
+    width: 90%;
+    height: 30px;
+    border-radius: 12px 25px 0px 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    padding: 10px;
 }
 
 label{
