--- a/htmlForms.css
+++ b/htmlForms.css
@@ -22,6 +22,7 @@ input{
     margin-top: 15px;
     margin-bottom: 15px;
     padding: 10px;
+    border: none;
 }
 
 textarea{
@@ -31,8 +32,16 @@ textarea{
     margin-top: 15px;
     margin-bottom: 15px;
     padding: 10px;
+    border: none;
 }
 
 label{
     color: rgb(246, 209, 250);
+}
+
+button{
+    background: rgb(235, 149, 245);
+    border: none;
+    border-radius: 40px 30px 10px 0px;
+    padding: 10px;
 }
