--- a/htmlForms.css
+++ b/htmlForms.css
@@ -53,11 +53,17 @@ label{
     color: rgb(246, 209, 250);
 }
 
+::placeholder{
+    color: rgb(196, 195, 195);
+}
+
 button{
     background: rgb(235, 149, 245);
     border: none;
     border-radius: 40px 30px 10px 0px;
-    padding: 10px;
+    margin-top: 20px;
+    padding: 15px;
+    cursor: pointer;
     transition: 0.5s;
 }
 
